# mobilenet-nova

./: .gitignore  README.md  circuit_tests.ipynb  compile-circuits.sh  head_input.json  mobilenet-tanh.ipynb  mobilenet-zanh.ipynb  mobilenet-zelu.ipynb  mobilenet.ipynb  tail_test.json
circuits/: AveragePooling2D.circom  Dense.circom  MiMC3D.circom  PaddedBatchNormalization2D.circom  PointwiseConv2D.circom  SeparableBNConv.circom  SumPooling2D.circom  backbone.circom  backbone_wo_hashing.circom  compile.sh  depthwiseConv2D.circom  head.circom  layer1.circom  model_test.circom  package-lock.json  package.json  padded.circom  paddedDepthwiseConv.circom  pointwiseConv2D.circom  separable.circom  tail.circom  util.circom
circuits/utils/: utils.circom
models/: __init__.py  data.py  mobilenet.py
nova/: Cargo.toml
nova/examples/toy/: compile.sh  toy.circom
nova/src/: main.rs
test_inputs/: head_input.json  layer_test.json  tail_test.json
