[package]
name = "mobilenet-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = "0.5.0"
nova-snark = { version = "0.23.0", default-features = false }
serde_json = "1.0.85"
pasta_curves = "0.5"
ff = { version = "0.13", features = ["derive"] }
