[package]
name = "mobilenet-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nova-scotia = "0.5.0"
nova-snark = { version = "0.23.0", default-features = false }
serde_json = "1.0.85"
serde_with = "3.4.0"
serde = { version = "1.0.152", features = ["derive"] }
pasta_curves = "0.5"
ff = { version = "0.13", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2.17"
primitive-types = "0.12.2"

[features]
default = []
cuda = ["nova-snark/cuda"]
# opencl = ["neptune/opencl", "neptune/pasta", "neptune/arity24"]
# flamegraph = ["pprof/flamegraph", "pprof/criterion"]
